--- a/.github/workflows/ReusableWorkflowuser.yaml
+++ b/.github/workflows/ReusableWorkflowuser.yaml
@@ -16,7 +16,7 @@ jobs:
         run: echo Hello, world!
 
   docker:
-    uses: AshwiniRanganath2020/ReusableWorkflow/blob/main/.github/workflows/build.yml@main
+    uses: AshwiniRanganath2020/ReusableWorkflow/workflows/build.yml@main
     with:
       image_name: my-awesome-app
       tag: $GITHUB_RUN_NUMBER
