--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,4 +125,9 @@ jobs:
           context: .
           push: true
           tags: ${{secrets.registry_username}}/${{inputs.image_name}}:${{env.final_tag}}
-      
+          
+        do-something-else:
+          runs-on: ubuntu-latest
+        steps:
+      - run: echo "Hello"
+       
