--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,8 +107,8 @@ jobs:
       - name: Login to the Registry
         uses: docker/login-action@v1
         with:
-          username: ${{secrets.registry_username}}
-          password: ${{secrets.registry_password}}
+          username: ${{secrets.REGISTRY_USERNAME}}
+          password: ${{secrets.REGISTRY_PASSWORD}}
       
       - name: Set the tag
         run: |
@@ -126,8 +126,8 @@ jobs:
           push: true
           tags: ${{secrets.registry_username}}/${{inputs.image_name}}:${{env.final_tag}}
           
-        do-something-else:
+  do-something-else:
           runs-on: ubuntu-latest
-        steps:
-      - run: echo "Hello"
+          steps:
+              - run: echo "Hello"
        
