--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,12 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
-      - name: copy template file from  shared-workflows repo
-        run: |
-          git clone https://${{ secrets.GH_TOKEN }}@github.com/BH-Corporate-Functions/shared-workflows.git
-      - name: copy the docker file to template directory
-        run: |
-          cp ${{ inputs.docker_file_path }}/Dockerfile ./shared-workflows/configs   
+      #- name: copy template file from  shared-workflows repo
+      #  run: |
+          #git clone https://${{ secrets.GH_TOKEN }}@github.com/BH-Corporate-Functions/shared-workflows.git
+      #- name: copy the docker file to template directory
+       # run: |
+        #  cp ${{ inputs.docker_file_path }}/Dockerfile ./shared-workflows/configs   
       - name: Install Trivy CLI
         run: |
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.31.3
