--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,21 +37,21 @@ jobs:
         run: |
           /usr/local/bin/trivy image --download-db-only  
      
-      - name: Run Trivy  scan for Docker Image and generate html report
-        run: |
-          /usr/local/bin/trivy image  --format template --template "@./shared-workflows/html.tpl" --ignorefile "./shared-workflows/.trivyignore" -o Report.html ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
+     # - name: Run Trivy  scan for Docker Image and generate html report
+      #  run: |
+       #   /usr/local/bin/trivy image  --format template --template "@./shared-workflows/html.tpl" --ignorefile "./shared-workflows/.trivyignore" -o Report.html ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
       
-      - name: Run Trivy scan for filesystem and generate html report(Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
-        run: |
-          /usr/local/bin/trivy fs --format template --template "@./shared-workflows/html.tpl" --ignorefile "./shared-workflows/.trivyignore" -o Report2.html ${{ inputs.Packages_lock }}
+     # - name: Run Trivy scan for filesystem and generate html report(Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
+      #  run: |
+       #   /usr/local/bin/trivy fs --format template --template "@./shared-workflows/html.tpl" --ignorefile "./shared-workflows/.trivyignore" -o Report2.html ${{ inputs.Packages_lock }}
       
-      - name: Run Trivy scan for dockerfile 
-        run: |
-          /usr/local/bin/trivy conf --policy ./shared-workflows/policies --format template --template "@./shared-workflows/html.tpl" -o Report3.html  --namespaces user ./shared-workflows/configs
+      #- name: Run Trivy scan for dockerfile 
+       # run: |
+        #  /usr/local/bin/trivy conf --policy ./shared-workflows/policies --format template --template "@./shared-workflows/html.tpl" -o Report3.html  --namespaces user ./shared-workflows/configs
         
-      - name: Append all reports to Report.html
-        run: |
-          cat Report3.html >> Report2.html;cat Report2.html >> Report.html
+     # - name: Append all reports to Report.html
+      #  run: |
+       #   cat Report3.html >> Report2.html;cat Report2.html >> Report.html
       - name: Upload Trivy vulnerabilities Report to artifact
         uses: actions/upload-artifact@v3
         with:
