--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,25 +76,25 @@ jobs:
 #          in_reply_to: svc-checkmarx@bakerhughes.com
 #          attachments: ./Report.html
 
-      - name: check for Crtical & High vulnerabilities in Docker Image
-        run: |
-          /usr/local/bin/trivy image --no-progress --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./shared-workflows/.trivyignore" ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
+     # - name: check for Crtical & High vulnerabilities in Docker Image
+      #  run: |
+       #   /usr/local/bin/trivy image --no-progress --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./shared-workflows/.trivyignore" ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
      
-      - name: Check for filesystem (Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
-        run: |
-          /usr/local/bin/trivy fs --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./shared-workflows/.trivyignore"  ${{ inputs.Packages_lock }}      
-      - name: check for Misconfig in Dockerfile (Optional)
-        run: |
-          /usr/local/bin/trivy conf --exit-code 1 --severity CRITICAL --policy ./shared-workflows/policies  --namespaces user ./shared-workflows/configs
-      - name: Docker Login
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: shyam-ks
-          password: ${{ secrets.GH_TOKEN }}  
-      - name: Push Docker Image to registry
-        run: |
-          docker image push ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
+      #- name: Check for filesystem (Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
+       # run: |
+        #  /usr/local/bin/trivy fs --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./shared-workflows/.trivyignore"  ${{ inputs.Packages_lock }}      
+      #- name: check for Misconfig in Dockerfile (Optional)
+       # run: |
+        #  /usr/local/bin/trivy conf --exit-code 1 --severity CRITICAL --policy ./shared-workflows/policies  --namespaces user ./shared-workflows/configs
+      #- name: Docker Login
+       # uses: docker/login-action@v2
+        #with:
+         # registry: ghcr.io
+          #username: shyam-ks
+          #password: ${{ secrets.GH_TOKEN }}  
+      #- name: Push Docker Image to registry
+       # run: |
+        #  docker image push ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
   build:
     runs-on: ubuntu-latest
 
