--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,12 +119,12 @@ jobs:
             echo "final_tag=${{inputs.tag}}" >> $GITHUB_ENV
           fi
       
-      - name: Build and Push the Image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{secrets.registry_username}}/${{inputs.image_name}}:${{env.final_tag}}
+      #- name: Build and Push the Image
+       # uses: docker/build-push-action@v2
+       # with:
+        #  context: .
+         # push: true
+          #tags: ${{secrets.registry_username}}/${{inputs.image_name}}:${{env.final_tag}}
           
   do-something-else:
           runs-on: ubuntu-latest
