--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,11 +104,11 @@ jobs:
       - name: Setup BuildX
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to the Registry
-        uses: docker/login-action@v1
-        with:
-          username: ${{secrets.REGISTRY_USERNAME}}
-          password: ${{secrets.REGISTRY_PASSWORD}}
+      #- name: Login to the Registry
+       # uses: docker/login-action@v1
+        #with:
+         # username: ${{secrets.REGISTRY_USERNAME}}
+          #password: ${{secrets.REGISTRY_PASSWORD}}
       
       - name: Set the tag
         run: |
