--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: copy template file from  shared-workflows repo
         run: |
-          git clone https://${{ secrets.GH_TOKEN }}@github.com/BH-Corporate-Functions/shared-workflows.git
+          git clone https://${{secrets.Github-new-token}}@github.com/AshwiniRanganath2020/ReusableWorkflow.git
       - name: copy the docker file to template directory
         run: |
           cp ${{ inputs.docker_file_path }}/Dockerfile ./shared-workflows/configs   
@@ -90,8 +90,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: shyam-ks
-          password: ${{ secrets.GH_TOKEN }}  
+          username: AshwiniRanganath2020
+          password: ${{ secrets.Github-new-token }}  
       - name: Push Docker Image to registry
         run: |
           docker image push ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
@@ -107,8 +107,8 @@ jobs:
       - name: Login to the Registry
         uses: docker/login-action@v1
         with:
-          username: ${{secrets.REGISTRY_USERNAME}}
-          password: ${{secrets.REGISTRY_PASSWORD}}
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
       
       - name: Set the tag
         run: |
@@ -124,7 +124,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{secrets.registry_username}}/${{inputs.image_name}}:${{env.final_tag}}
+          tags: ${{secrets.DOCKER_USERNAME}}/${{inputs.image_name}}:${{env.final_tag}}
           
   do-something-else:
           runs-on: ubuntu-latest
