--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: build
 
 on:
   workflow_call:
-    inputs:
+    inputs:./shared-workflows/.trivyignore
       image_name:
         required: true
         type: string
@@ -39,11 +39,11 @@ jobs:
      
       - name: Run Trivy  scan for Docker Image and generate html report
         run: |
-          /usr/local/bin/trivy image  --format template --template "@./ReusableWorkflow/html.tpl" --ignorefile "./shared-workflows/.trivyignore" -o Report.html ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
+          /usr/local/bin/trivy image  --format template --template "@./ReusableWorkflow/html.tpl" --ignorefile "./ReusableWorkflow/.trivyignore" -o Report.html ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
       
       - name: Run Trivy scan for filesystem and generate html report(Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
         run: |
-          /usr/local/bin/trivy fs --format template --template "@./shared-workflows/html.tpl" --ignorefile "./shared-workflows/.trivyignore" -o Report2.html ${{ inputs.Packages_lock }}
+          /usr/local/bin/trivy fs --format template --template "@./shared-workflows/html.tpl" --ignorefile "./ReusableWorkflow/.trivyignore" -o Report2.html ${{ inputs.Packages_lock }}
       
       - name: Run Trivy scan for dockerfile 
         run: |
