--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,17 +1,31 @@
 name: build
+
 on:
   workflow_call:
     inputs:
-     image_name:
+      image_name:
         required: true
-          type: string
-      tag: 
         type: string
-    secrets:
-      registry_username:
+      # GitHub Repo Name		
+      GHCR_REPO:
         required: true
-      registry_password:
+        type: string	
+      # Path to the Dockerfile. (default {context}/Dockerfile)
+      docker_file_path:
         required: true
+        type: string
+      image_tag:
+        required: true
+        type: string
+        default: "0"
+      Packages_lock:
+        type: string
+        required: true
+        description: "location of lock file Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json"    
+      username:
+        type: string
+        required: true
+        description: "github username"
 
 jobs:
   do-it:
