--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,31 +13,22 @@ on:
         required: true
       registry_password:
         required: true
-jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Event Info
-        if: github.actor != 'dependabot[bot]' && !(github.event_name == 'push' || github.event_name == 'workflow_dispatch')
-        run: |
-          echo "::warning  ::Code changes wont be deployed for pull requests."  
-      - name: Clear GitHub Workspace
-        run: rm -fr $GITHUB_WORKSPACE && mkdir $GITHUB_WORKSPACE
-      
-      - name: Checkout code
-        uses: actions/checkout@v2
-        
-      - name: Build docker image from Dockerfile (Optional)
-        run: |
-          docker build -t ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}  ${{ inputs.docker_file_path }}
 
-      - name: copy template file from  ReusableWorkflow repo
+jobs:
+  do-it:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run a one-line script
+        run: echo Hello, world!
+
+      - name: copy template file from  shared-workflows repo
         run: |
-          git clone https://${{secrets.Github-new-token}}@github.com/AshwiniRanganath2020/ReusableWorkflow.git
+          git clone https://${{ secrets.GH_TOKEN }}@github.com/BH-Corporate-Functions/shared-workflows.git
       - name: copy the docker file to template directory
         run: |
-          cp ${{ inputs.docker_file_path }}./ReusableWorkflow/Dockerfile ./ReusableWorkflow/configs  
+          cp ${{ inputs.docker_file_path }}/Dockerfile ./shared-workflows/configs   
       - name: Install Trivy CLI
         run: |
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin v0.31.3
@@ -48,11 +39,11 @@ jobs:
      
       - name: Run Trivy  scan for Docker Image and generate html report
         run: |
-          /usr/local/bin/trivy image  --format template --template "@./ReusableWorkflow/html.tpl" --ignorefile "./ReusableWorkflow/.trivyignore" -o Report.html ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
+          /usr/local/bin/trivy image  --format template --template "@./shared-workflows/html.tpl" --ignorefile "./shared-workflows/.trivyignore" -o Report.html ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
       
       - name: Run Trivy scan for filesystem and generate html report(Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
         run: |
-          /usr/local/bin/trivy fs --format template --template "@./ReusableWorkflow/html.tpl" --ignorefile "./ReusableWorkflow/.trivyignore" -o Report2.html ${{ inputs.Packages_lock }}
+          /usr/local/bin/trivy fs --format template --template "@./shared-workflows/html.tpl" --ignorefile "./shared-workflows/.trivyignore" -o Report2.html ${{ inputs.Packages_lock }}
       
       - name: Run Trivy scan for dockerfile 
         run: |
@@ -80,7 +71,7 @@ jobs:
 #          from: svc-checkmarx <svc-checkmarx@bakerhughes.com>
 #          body: "Build job of ${{github.repository}} completed successfully!"
 #          ignore_cert: true
-#          convert_markdown: tru
+#          convert_markdown: true
 #          reply_to: svc-checkmarx@bakerhughes.com
 #          in_reply_to: svc-checkmarx@bakerhughes.com
 #          attachments: ./Report.html
@@ -94,13 +85,13 @@ jobs:
           /usr/local/bin/trivy fs --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./shared-workflows/.trivyignore"  ${{ inputs.Packages_lock }}      
       - name: check for Misconfig in Dockerfile (Optional)
         run: |
-          /usr/local/bin/trivy conf --exit-code 1 --severity CRITICAL --policy ./ReusableWorkflow/policies  --namespaces user ./shared-workflows/configs
+          /usr/local/bin/trivy conf --exit-code 1 --severity CRITICAL --policy ./shared-workflows/policies  --namespaces user ./shared-workflows/configs
       - name: Docker Login
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: AshwiniRanganath2020
-          password: ${{ secrets.Github-new-token }}  
+          username: shyam-ks
+          password: ${{ secrets.GH_TOKEN }}  
       - name: Push Docker Image to registry
         run: |
           docker image push ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
@@ -116,8 +107,8 @@ jobs:
       - name: Login to the Registry
         uses: docker/login-action@v1
         with:
-          username: ${{secrets.DOCKER_USERNAME}}
-          password: ${{secrets.DOCKER_PASSWORD}}
+          username: ${{secrets.registry_username}}
+          password: ${{secrets.registry_password}}
       
       - name: Set the tag
         run: |
@@ -133,10 +124,11 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{secrets.DOCKER_USERNAME}}/${{inputs.image_name}}:${{env.final_tag}}
+          tags: ${{secrets.registry_username}}/${{inputs.image_name}}:${{env.final_tag}}
+          
           
   do-something-else:
-          runs-on: ubuntu-latest
-          steps:
-              - run: echo "Hello"
-       
+    runs-on: ubuntu-latest
+
+    steps:
+    - run: echo "Hello"
