--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,7 +78,7 @@ jobs:
 
       - name: check for Crtical & High vulnerabilities in Docker Image
         run: |
-          /usr/local/bin/trivy image --no-progress --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./ReusableWorkflow/.trivyignore" ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
+          /usr/local/bin/trivy image --no-progress --exit-code 1 --severity CRITICAL,HIGH --ignore-unfixed --ignorefile "./ReusableWorkflow/.trivyignore" ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}
      
       - name: Check for filesystem (Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json)
         run: |
@@ -94,7 +94,7 @@ jobs:
           password: ${{ secrets.GH_TOKEN }}  
       - name: Push Docker Image to registry
         run: |
-          docker image push ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
+          docker image push ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}
   build:
     runs-on: ubuntu-latest
 
