--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,15 +3,15 @@ name: build
 on:
   workflow_call:
     inputs:
-      image_name:
+      image_name: 
         required: true
         type: string
       tag: 
         type: string
     secrets:
-      registry_username:
+      REGISTRY_USERNAME:
         required: true
-      registry_password:
+      REGISTRY_PASSWORD:
         required: true
 
 jobs:
@@ -107,8 +107,8 @@ jobs:
       - name: Login to the Registry
         uses: docker/login-action@v1
         with:
-          username: ${{secrets.registry_username}}
-          password: ${{secrets.registry_password}}
+          username: ${{secrets.REGISTRY_USERNAME}}
+          password: ${{secrets.REGISTRY_PASSWORD}}
       
       - name: Set the tag
         run: |
@@ -124,7 +124,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{secrets.registry_username}}/${{inputs.image_name}}:${{env.final_tag}}
+          tags: ${{secrets.REGISTRY_USERNAME}}/${{inputs.image_name}}:${{env.final_tag}}
           
           
   do-something-else:
