--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,8 +90,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: shyam-ks
-          password: ${{ secrets.GH_TOKEN }}  
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}  
       - name: Push Docker Image to registry
         run: |
           docker image push ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}
