--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -121,10 +121,15 @@ jobs:
       
       - name: Build and Push the Image
         uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{secrets.REGISTRY_USERNAME}}/${{inputs.image_name}}:${{env.final_tag}}
+    with:
+      image_name: trivyscan
+      tag: ashwiniranganath2020/trivyscan
+    secrets:
+      username: ${{secrets.DOCKER_USERNAME}}
+      password: ${{secrets.DOCKER_PASSWORD}}
+      context: .
+      push: true
+       tags: ${{secrets.REGISTRY_USERNAME}}/${{inputs.image_name}}:${{env.final_tag}}
           
           
   do-something-else:
