--- a/.github/workflows/ReusableWorkflowuser.yaml
+++ b/.github/workflows/ReusableWorkflowuser.yaml
@@ -16,10 +16,10 @@ jobs:
         run: echo Hello, world!
 
   docker:
-    uses: AshwiniRanganath2020/ReusableWorkflow/.github/workflows/build.yml@main
+    uses: AshwiniRanganath2020/ReusableWorkflow/.github/workflows/ReusableWorkflowuser.yml@main
     with:
       image_name: ashwiniranganath2020/trivyscan
       tag: ashwiniranganath2020/trivyscan
     secrets:
-      registry_username: ${{secrets.REGISTRY_USERNAME}}
-      registry_password: ${{secrets.REGISTRY_PASSWORD}}
+        username: ${{secrets.DOCKER_USERNAME}}
+        password: ${{secrets.DOCKER_PASSWORD}}
