--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,6 @@ jobs:
 
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-          docker tag app ashwiniranganath2020/trivyscan
+          docker tag trivyscan ashwiniranganath2020/trivyscan
 
           docker push ashwiniranganath2020/trivyscan
