--- a/.github/workflows/connection.yml
+++ b/.github/workflows/connection.yml
@@ -104,11 +104,11 @@ jobs:
       - name: Setup BuildX
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to the Docker
+      - name: Login to the REGISTRY
         uses: docker/login-action@v1
         with:
-          username: ${{secrets.DOCKER_USERNAME}}
-          password: ${{secrets.DOCKER_PASSWORD}}
+          username: ${{secrets.REGISTRY_USERNAME}}
+          password: ${{secrets.REGISTRY_PASSWORD}}
       
       - name: Set the tag
         run: |
@@ -124,7 +124,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{secrets.DOCKER_USERNAME}}/${{inputs.image_name}}:${{env.final_tag}}
+          tags: ${{secrets.REGISTRY_USERNAME}}/${{inputs.image_name}}:${{env.final_tag}}
           
           
   do-something-else:
