--- a/.github/workflows/connection.yml
+++ b/.github/workflows/connection.yml
@@ -90,8 +90,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: hub.docker.com
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}  
+          username: ${{ secrets.REGISTRY_PASSWORD }}
+          password: ${{ secrets.REGISTRY_USERNAME }}  
       - name: Push Docker Image to registry
         run: |
           docker image push ${{ inputs.hub.docker.com }}${{ inputs.image_name }}
