--- a/.github/workflows/connection.yml
+++ b/.github/workflows/connection.yml
@@ -22,6 +22,18 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run a one-line script
         run: echo Hello, world!
+        
+        steps:
+
+      - uses: actions/checkout@v3
+
+      - name: Scripts
+
+        run: |
+          docker build -t trivyscan .
+          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          docker tag trivyscan ashwiniranganath2020/trivyscan
+          docker push ashwiniranganath2020/trivyscan
 
       - name: copy template file from  ReusableWorkflow repo
         run: |
