--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,10 @@ on:
         type: string
       tag: 
         type: string
+      Packages_lock:
+        type: string
+        required: true
+        description: "location of lock file Trivy will look for vulnerabilities based on lock files such as Gemfile.lock and package-lock.json" 
     secrets:
       REGISTRY_USERNAME:
         required: true
