--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,45 +90,9 @@ jobs:
       - name: Docker Login
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}  
+          
+          username: ashwiniranganath2020
+          password: AshwiniRanganath2020 
       - name: Push Docker Image to registry
         run: |
-          docker image push ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}
-  build:
-    runs-on: ubuntu-latest
-
-    steps:      
-      - uses: actions/checkout@v2
-      
-      - name: Setup BuildX
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to the Registry
-        uses: docker/login-action@v1
-        with:
-          username: ${{secrets.REGISTRY_USERNAME}}
-          password: ${{secrets.REGISTRY_PASSWORD}}
-      
-      - name: Set the tag
-        run: |
-          if [ -z "${{inputs.tag}}" ]
-          then
-            echo "final_tag=latest" >> $GITHUB_ENV
-          else
-            echo "final_tag=${{inputs.tag}}" >> $GITHUB_ENV
-          fi
-      
-      - name: Build and Push the Image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{secrets.REGISTRY_USERNAME}}/${{inputs.image_name}}:${{env.final_tag}}
-          
-          
-  do-something-else:
-    runs-on: ubuntu-latest
-
-    steps:
-    - run: echo "Hello"
+          docker image push ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
