--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,4 +95,4 @@ jobs:
           password: AshwiniRanganath2020 
       - name: Push Docker Image to registry
         run: |
-          docker image push ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}:${{ inputs.image_tag }}
+          docker image push ${{ inputs.GHCR_REPO }}${{ inputs.image_name }}
