--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,4 +98,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}
+          tags: ashwiniranganath2020/trivyscan:1.0
