--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,8 +91,8 @@ jobs:
       - name: Docker Login
         uses: docker/login-action@v2
         with:          
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          username: ashwiniranganath2020
+          password: AshwiniRanganath2020
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
