--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,8 +90,8 @@ jobs:
       - name: Docker Login
         uses: docker/login-action@v2
         with:          
-          username: ashwiniranganath2020
-          password: AshwiniRanganath2020 
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }} 
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
