--- a/.github/workflows/ReusableWorkflowuser.yaml
+++ b/.github/workflows/ReusableWorkflowuser.yaml
@@ -21,5 +21,5 @@ jobs:
       image_name: ashwiniranganath2020/trivyscan
       tag: ashwiniranganath2020/trivyscan
     secrets:
-      registry_username: ${{secrets.REGISTRY_USERNAME}}
-      registry_password: ${{secrets.REGISTRY_PASSWORD}}
+      registry_username: ${{secrets.DOCKER_HUB_USERNAME}}
+      registry_password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
