--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,21 +32,21 @@ jobs:
         run: echo Hello, world!
         
       - name: Run OSS Scan - BackDuck
-        uses: synopsys-sig/detect-action@v0.3.3
+        uses: synopsys-sig/detect-action@v0.3.4
         continue-on-error: true
         env:
           DETECT_PROJECT_NAME: "AshwiniRanganath2020"
           DETECT_PROJECT_VERSION_NAME: "1.0.0"
-          DETECT_PROJECT_VERSION_LICENSE: "Baker Hughes Proprietary License"
+        #  DETECT_PROJECT_VERSION_LICENSE: "Baker Hughes Proprietary License"
           DETECT_PROJECT_GROUP_NAME: "IAM-Projects"
-          DETECT_PROJECT_TAGS: "BentlyNevada,GitHub"
+         # DETECT_PROJECT_TAGS: "BentlyNevada,GitHub"
           DETECT_DETECTOR_SEARCH_DEPTH: 10
           DETECT_DETECTOR_SEARCH_CONTINUE: true
           DETECT_DIAGNOSTIC: true
         with:
          scan-mode: INTELLIGENT
          github-token: ${{ secrets.GITHUB_TOKEN}}
-         detect-version: 8.2.0
+         detect-version: 8.3.0
          blackduck-url: ${{ secrets.BLACKDUCK_URL }}
          blackduck-api-token: ${{ secrets.BLACKDUCK_TOKEN }}
 
